--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <h2>Website Develop by buildapproval</h2>
         <nav>
             <a href="#about">About</a>
-            <a href="#projects">Classic Builds</a>
+            <a href="#projects">Builds</a>
             <a href="#models">Models</a>
             <a href="#scripting">Scripting</a>
             <a href="#animator">Animator</a>
