--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Designer & Animator Portfolio</title>
+    <title>buildapproval Portfolio</title>
     <style>
         * {
             margin: 0;
