--- a/index.html
+++ b/index.html
@@ -223,6 +223,11 @@
                     <h3>Hammer</h3>
                     <p>Clown looking hammer.</p>
                 </div>
+                <div class="project-card">
+                    <img src="Images\squid.png" alt="Model 1">
+                    <h3>Squid Game Gate</h3>
+                    <p>Gates</p>
+                </div>
             </div>
         </div>
 
