--- a/index.html
+++ b/index.html
@@ -212,6 +212,14 @@
                     <h3>Small Police Department.</h3>
                     <p>Quick small PD build.</p>
                 </div>
+
+                </div>
+                                <div class="project-card">
+                    <img src="Images\tugofwar1.png" alt="Design 3">
+                <img src="Images\tugofwar1.png" alt="Design 3">
+                    <h3>Squid Game: Tug Of War : S1</h3>
+                    <p>Tug of war build.</p>
+                </div>
             </div>
         </div>
 
